src/App.css
.nav-bg {
  background: #5f2c82; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to right,
    #49a09d,
    #5f2c82
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to right,
    #49a09d,
    #5f2c82
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.nav-item {
  text-decoration: none !important;
  color: #fff;
}

.nav-item:hover {
  color: #72cfcc;
}

.header-container {
  height: 50vh;
  background: linear-gradient(
      to bottom,
      rgba(255, 255, 255, 0.759),
      rgba(96, 44, 130, 0.416)
    ),
    url("./jewelheader.jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
  display: flex;
  text-align: left;
  align-items: center;
  justify-content: flex-start;
}

.game-btn {
  background: #49a09d;
  border: 1px solid #49a09d;
}

.game-btn:hover {
  background: #328683;
  border: 1px solid #328683;
}

.jewel-btns {
  display: flex;
  align-items: center;
  justify-content: center;
}

.jewel-icons {
  color: #5f2c82;
}

.jewel-icons {
  overflow: hidden;
  transition: transform 100ms ease-in;
  cursor: pointer;
  font-weight: 400;
  text-decoration: none;
}

.jewel-icons:hover {
  transform: scale(1.105);
}

.sect1-bg {
  background-image: url("https://images.unsplash.com/photo-1613413284339-91c396f434cf?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1983&q=80");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 40vh;
}

.sect2-bg {
  background-image: url("https://images.unsplash.com/photo-1577481759269-e704c1871a26?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1567&q=80");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 40vh;
}

.sect3-bg {
  background-image: url("https://images.unsplash.com/photo-1611331411044-faed0a0d69b1?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1600&q=80");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 40vh;
}

.text-sect {
  min-height: 40vh;
  padding-top: 10%;
}

.donation-rzn {
  background-color: #f3ec78;
  background-image: linear-gradient(to right, #49a09d, #5f2c82);
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}

